--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import com.powilliam.composefundamentals.buildsrc.*
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -22,6 +24,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion Dependencies.composeVersion
+        kotlinCompilerVersion Dependencies.kotlinVersion
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -32,11 +41,21 @@ android {
 }
 
 dependencies {
+    implementation Dependencies.AndroidX.core
+    implementation Dependencies.AndroidX.appcompat
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation Dependencies.Google.materialDesign
+
+    implementation Dependencies.AndroidX.Activity.activityCompose
+
+    implementation Dependencies.AndroidX.Lifecycle.viewModelCompose
+
+    implementation Dependencies.AndroidX.Compose.ui
+    implementation Dependencies.AndroidX.Compose.tooling
+    implementation Dependencies.AndroidX.Compose.foundation
+    implementation Dependencies.AndroidX.Compose.material
+    implementation Dependencies.AndroidX.Compose.icons
+    implementation Dependencies.AndroidX.Compose.iconsExtended
+    implementation Dependencies.AndroidX.Compose.runtime
+    implementation Dependencies.AndroidX.Compose.compiler
 }
